--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+body {
+    font-family: helvetica, arial, verdana, sans-serif;
+}
+
+input {
+	font-size: 2.4em;
+	background-color: transparent;
+	text-align: center;
+	border-width: 0;
+	width: 100%;
+	margin: 0 0 .1em 0;
+	color: #fff;
+}
 
 function modify_qty(val) {
     var qty = document.getElementById('qty').value;
